添加低版本存储实现